refactor: streamline annotation mode handling and remove redundant drawing operations code